--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,5 @@
-.form-control{appearance: auto !important; -webkit-appearance: auto !important; -moz-appearance: auto !important;}
+.form-control {
+  appearance: auto !important;
+  -webkit-appearance: auto !important;
+  -moz-appearance: auto !important;
+}
